Quick fix for that obnoxious display issue on small devices

--- a/public/stylesheets/small.css
+++ b/public/stylesheets/small.css
@@ -6,3 +6,7 @@ body {
 .navbar {
   font-size: 45px;
 }
+.display {
+  height: 60%;
+  padding-bottom: 15%;
+}
